--- a/Excel2PDFReports/src/app/shared/components/upload-file/upload-file.component.html
+++ b/Excel2PDFReports/src/app/shared/components/upload-file/upload-file.component.html
@@ -79,3 +79,11 @@
     </div>
   </div>
 </div>
+
+<!-- Loader Overlay -->
+<div *ngIf="isLoading" class="loader-overlay">
+  <div class="loader-content">
+    <div class="dot-typing"></div>
+    <p class="loader-text">Generating<span class="dots">...</span></p>
+  </div>
+</div>
